# game_of_life_v2.0

./: CMakeLists.txt  README.md
include/: Constants.hpp  Timer.hpp
src/: Timer.cpp  main.cpp
